              also adds comparison operators (<, <=, >, >=) to this class.
        Class LightweightSequence<T>:
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) as before.
        Class Link:
            - Added initial support for virtual knots and links, with new
              routines isClassical(), virtualGenus(), and makeVirtual().
            - New routine alexander() and class constant alexanderVar.
            - New routine makeAlternating().
            - New routine seifertCircles().
            - New routine whiteheadDouble().
            - New routines isConnected() and diagramComponents().
            - New routines insertLink() and moveContentsTo().
            - New routines countTrivialComponents() and pdAmbiguous(), to help
              understand the limitations of planar diagram codes.
            - New routine hash(), which uses the tight encoding.
            - New routines overForComponent() and underForComponent().
            - New variant of reverse() to reverse just one component of a
              multiple-component link.
            - New routine componentsByStrand().
            - New routine linking2(), which returns twice the linking number;
              linking() will now throw an exception when called on a virtual
              link whose linking number is not an integer.
            - Regarding Reidemeister moves:
              + The (check, perform) variants of r1(), r2() and r3() are
                deprecated.  You should now use these routines _without_ extra
                check/perform arguments: they will always check for and (if
                possible) perform the relevant moves.
              + New routines hasR1(), hasR2() and hasR3() for checking only.
              + New read-only routines withR1(), withR2() and withR3() that (if