@@ -234,6 +234,7 @@ void addLink(pybind11::module_& m) {
         .def("writheOfComponent", overload_cast<size_t>(
             &Link::writheOfComponent, pybind11::const_),
             rdoc::writheOfComponent_2)
+        .def("selfLinking", &Link::selfLinking, rdoc::selfLinking)
         .def("isClassical", &Link::isClassical, rdoc::isClassical)
         .def("virtualGenus", &Link::virtualGenus, rdoc::virtualGenus)
         .def("seifertCircles", &Link::seifertCircles, rdoc::seifertCircles)
